# mcp-speech-to-text

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_X86_64.md  DEVELOPMENT.md  Dockerfile  Dockerfile.optimized  Dockerfile.simple  Dockerfile.slim  FINAL_TEST_RESULTS.md  GITHUB_GUIDELINES.md  GITHUB_SUCCESS.md  INSTALL.md  LOCAL_OFFLINE_SETUP.md  N8N_INTEGRATION_READY.md  N8N_READY.md  POWERSHELL.md  PROJECT_CLEANUP_COMPLETE.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  README_NEW.md  SETUP_COMPLETE.md  SET_REPOSITORY_DESCRIPTION.md  comprehensive_test.py  create_test_audio.py  docker-compose.yml  docker-entrypoint.sh  http_server.py  install_offline.sh  pyproject.toml  requirements.txt  start-mcp-server.sh  test_comprehensive.py  test_functionality.py  test_report.md  test_server.py  test_tools.py
.github/workflows/: build-x86_64.yml  release.yml
examples/: n8n_workflow_example.json  usage_example.py
scripts/: build-x86_64.sh  build.bat  build.ps1  build.sh  dev.ps1  start.bat  start.ps1  start.sh  test-deployment.sh
src/mcp_speech_to_text/: __init__.py  __main__.py  server.py  server_sr.py
tests/: __init__.py  test_server.py
